--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="charts.js"></script>
-  <script src="BellyButton_bar_chart_solution.js"></script>
+  <!-- <script src="BellyButton_bar_chart_solution.js"></script> -->
 </body>
 
 </html>
